# call-me-maybe

./: .gitignore  README.md  d.txt  main.py  main_v2.py  makefile  note.txt  pyproject.toml  tree_visualizer.py
data/output/: function_calling_results.json
llm_sdk/: __init__.py
llm_sdk/llm_sdk/: __init__.py
src/: __init__.py  __main__.py  data_validation.py  parcing.py  tree_visualizer.py  type_aliases.py
