[project]
name = "call-me-maybe"
version = "1.0.0"
authors = [
  { name="mboutte", email="mboutte@student.42lyon.fr" },
]
description = "None"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch==2.6.0+cpu",
    "numpy",
    "transformers",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }



[project.optional-dependencies]
dev = [
    "snakeviz"
]

[project.urls]
"Homepage" = "https://projects.intra.42.fr/a-maze-ing/mboutte"

[tool.hatch.build.targets.wheel]
packages = ["src/mazegen"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = "mlx.*"
ignore_missing_imports = true
