[project]
name = "call-me-maybe"
version = "1.0.0"
authors = [
  { name="mboutte", email="mboutte@student.42lyon.fr" },
]
description = "None"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
    "numpy",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "accelerate>=1.13.0",
]


[project.optional-dependencies]
dev = [
    "snakeviz",
    "flake8",
    "mypy",
]

[project.urls]
"Homepage" = "https://projects.intra.42.fr/a-maze-ing/mboutte"

[tool.hatch.build.targets.wheel]
packages = ["src/mazegen"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
mypy_path = "src"
files = ["src"]
[[tool.mypy.overrides]]
module = [
    "rich.*",
    "llm_sdk.*",
    "type_aliases"
]
ignore_errors = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "snakeviz>=2.2.2",
]
